k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
spec:
  ingressClassName: nginx
  rules:
    - host: demo-app.shared-prod.euw1.zenobe.internal
      http:
        paths:
          - backend:
              service:
                name: demo-app
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
